# mcp_basic_todolist

./: .env  the_todo  the_todo.db
docs/: .$mcp_design.drawio.bkp  er.planuml  mcp_design.drawio
mcp_todolist/: Cargo.toml  diesel.toml
mcp_todolist/src/: app.rs  lib.rs  main.rs
mcp_todolist/src/api_docs/: init_open_api.rs  mod.rs  todolist_api.rs
mcp_todolist/src/application/usecase/: mod.rs  todo_usecase.rs
mcp_todolist/src/configuration/: api_doc_config.rs  config.rs  mod.rs
mcp_todolist/src/domain/: mod.rs
mcp_todolist/src/domain/dto/: mod.rs  todo_dto.rs
mcp_todolist/src/domain/entities/: mod.rs  todo_entity.rs
mcp_todolist/src/domain/migration/2025-05-08-143454_create_todolist_table/: down.sql  up.sql
mcp_todolist/src/domain/repository/: todo_repository.rs
mcp_todolist/src/domain/schema/: schema.rs
mcp_todolist/src/infrastructure/: mod.rs
mcp_todolist/src/infrastructure/faring/: cors.rs
mcp_todolist/src/infrastructure/http_handler/: http_handler.rs  init_handler.rs  mod.rs  response_type.rs
mcp_todolist/src/infrastructure/mcp_handler/: handler.rs
mcp_todolist/src/infrastructure/sqlite/: mod.rs
mcp_todolist/src/infrastructure/sqlite/db_connection/: mod.rs  sqlite_con.rs
mcp_todolist/src/infrastructure/sqlite/repository_impl/: todolist.rs
