[package]
name = "mcp_todolist"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }
validator = { version = "0.20.0", features = ["derive"] }
sysinfo = "0.35.0"
schemars = { version = "0.8.22", optional = true }
futures = "0.3.31"
rand = { version = "0.9.1" }
async-trait = "0.1.88"
mockall = "0.13.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }